--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 /*
  * The name of the package file. Also used as the name uploaded to the maven repo.
  */
-//artifactId=InkPageView
+//artifactId=HelloWorldw
 
 /*
  * The group definition.
  */
-groupId=com.nook
+groupId=com.companyname
 
 /*
  * The version definition, please suffix with '-SNAPSHOT' for snapshot version.
