--- a/package.gradle
+++ b/package.gradle
@@ -2,7 +2,7 @@
  * The packages definitions.
  */
 ext.packages=[
-  [source: 'pool/android.jar', target: 'android',  classifier: null, extension: 'jar', version: '1.0.0.0', group: 'com.nook'],
+  [source: 'pool/android.jar', target: 'android',  classifier: null, extension: 'jar', version: '1.0.0.0', group: 'com.companyname'],
 ]
 
 /*
